# GroundStation

./: CMakeLists.txt  README.md  TODO.txt  package.xml  plugin installation steps.txt  plugin installation steps.txt~  plugin.xml  setup.py  setup.sh
launch/: ground_station.launch~
scripts/: ground_station
src/ground_station/: 00TODO.txt  Geo.py  Signals.py  WaypointConvert.py  __init__.py  __init__.py~  artificial_horizon.py  cm_window.py  control_widget.py  control_widget.py~  current_path_generator.py  drop_planner.py  ground_station.py  ground_station.py~  gs_plugin.py  gs_plugin.py~  landing_planner.py  manage_kml.py  map_info_parser.py  map_widget.py  map_widget.py~  marble_map.py  messages_tree_view.py  plot_widget.py  test_widget_3.py~  tmp_msg_ex.py  topic_viewer_widget.py  widget_master_example.txt  wp_window.py
src/ground_station/resources/: cm_window.ui  db_handler.py  map_info.xml  map_info.xml~  map_widget.ui  map_widget.ui~  plottable values (pending)  topic_publisher.py  wp_window.ui
src/ground_station/resources/kml_files/: boundaries_linearRing.kml
src/ground_station/resources/wp_data/: 00_README_00  00_README_00~  Brigham Young University_wp_data.txt~  Naval Base Competition_wp_data.txt  Naval Base Competition_wp_data.txt~  Rock Canyon Park_wp_data.txt  Utah County Airfield_wp_data.txt
src/ground_station/resources/wp_data/custom wps/: NavalBase
src/ground_station/rrt_resources/: PointInBounds.py  new_rrt_path_planner.py
src/ground_station/tmp_plot_widget/: plot.py  plot_widget.py
(+11 files in other folders)
